--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  /* padding: 0;
+  margin: 0; */
 }
 
 .container {
-  font-size: 3rem;
+  /* font-size: 3rem;
   margin: auto;
   max-width: 800px;
-  margin-top: 20px;
+  margin-top: 20px; */
+  margin-top: 6rem;
+  margin-left: 4rem;
 }
